--- a/demo.html
+++ b/demo.html
@@ -320,12 +320,26 @@
                 <div class="slide"><img src="brand-2-1.png" alt="Image 2"></div>
                 <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
                 <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
-            </div>
-        </div>
-        <div class="slider-container">
-            <div class="slider">
                 <div class="slide"><img src="brand-2-1.png" alt="Image 1"></div>
                 <div class="slide"><img src="brand-2-1.png" alt="Image 2"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
+                <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
                 <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
                 <div class="slide"><img src="brand-2-1.png" alt="Image 3"></div>
             </div>
