--- a/demo.html
+++ b/demo.html
@@ -75,7 +75,6 @@
             <img src="forwards.png" class="hforward">
         </div>
         <div class="hcard">
-            <div class="circle-image"></div>
             <div class="card-img"><img src="ig.webp"></div>
             <h4>Women’s Course</h4>
             <p>Lorem Ipsum is simply dummy themes industryes psum has been them industry the loep into type setting.</p>
@@ -92,7 +91,9 @@
     </div>
 
     <div class="about">
-        <div class="hAboutImg"><img src="careers-in-corporate-finance.jpg" height="80%" ; width="90%"><button
+        <div class="hAboutImg">
+            <div class="circle-image"><img src="logo-search-grid-1x-removebg-preview-removebg-preview.png"></div>
+            <img src="careers-in-corporate-finance.jpg" height="80%" ; width="90%"><button
                 class="aboutbtn">Meet Instructor</button></div>
         <div class="hAbout">
             <h6>25+ YEARS OF EXPERIENCE</h6>
