feat: hover animation

--- a/demo.html
+++ b/demo.html
@@ -27,10 +27,7 @@
             }
         }
 
-        window.addEventListener('DOMContentLoaded', function () {
-            handleScroll();
-        });
-
+        window.addEventListener('DOMContentLoaded', handleScroll); 
         window.addEventListener('scroll', handleScroll);
 
     </script>
@@ -79,7 +76,7 @@
             <h4>Women’s Course</h4>
             <p>Lorem Ipsum is simply dummy themes industryes psum has been them industry the loep into type setting.</p>
             <br>
-            <img src="forwards.png" class="hforward">
+            <img src="forwards.png" class="hforward1">
         </div>
         <div class="hcard">
             <div class="card-img"><img src="linkdin.png"></div>
@@ -94,8 +91,10 @@
         <div class="hAboutImg">
             <div class="circle-image"><img src="logo-search-grid-1x-removebg-preview-removebg-preview.png"></div>
             <img src="careers-in-corporate-finance.jpg" height="80%" ; width="90%"><button
-                class="aboutbtn">Meet Instructor</button></div>
+                class="aboutbtn">Meet Instructor</button>
+            </div>
         <div class="hAbout">
+            <img src="leaf.webp">
             <h6>25+ YEARS OF EXPERIENCE</h6>
             <h2>We have expert instructor for help our students.</h2>
             <p>Lorem Ipsum is simply dummy text the printing and typesetting standard dummy text ever since the 150 when
@@ -177,7 +176,9 @@
 
     <div class="testmonial">
         <div class="subtest">
-            <h6>HAPPY STUDENTS</h6>
+            <div class="leaf1"><img src="shape-5.webp"></div>
+            <div class="leaf2"><img src="shape-6.webp"></div>
+            <h6 class="yellow">HAPPY STUDENTS</h6>
             <h2>What Client Say About Us</h2>
             <div class="avtar"><img src="people-removebg-preview.png"></div>
             <p>Lorem sum same dummy text theme industry psum have been them industry the leaf into type setting. Lorem
@@ -185,7 +186,7 @@
                 industry the leaf into type setting. </p>
             <br>
             <h4>Abcd jain </h4>
-            <h6>ui/ux</h6>
+            <h6 class="yellow">ui/ux</h6>
         </div>
     </div>
     <div class="partner">
@@ -237,7 +238,7 @@
         <div class="tcard">
             <div class="timecard">
                 <div class="uppert">
-                    <span class="tdate"><span class="yellow">24 Feb</span></span>
+                    <span class="tdate"><span class="yellow">24 </span>Feb </span>
                     <div>
                         <p><span class="yellow">By</span>: Maddie Rife</p>
                         <span class="yellow">
@@ -256,7 +257,7 @@
             </div>
             <div class="timecard">
                 <div class="uppert">
-                    <span class="tdate"><span class="yellow">24 Feb</span></span>
+                    <span class="tdate"><span class="yellow">24 </span>Feb</span>
                     <div>
                         <p><span class="yellow">By</span>: Maddie Rife</p>
                         <span class="yellow">
@@ -275,7 +276,7 @@
             </div>
             <div class="timecard" style="margin-right: 0px;">
                 <div class="uppert">
-                    <span class="tdate"><span class="yellow">24 Feb</span></span>
+                    <span class="tdate"><span class="yellow">24 </span>Feb </span>
                     <div>
                         <p><span class="yellow">By</span>: Maddie Rife</p>
                         <span class="yellow">
