create about page or edit demo page

--- a/demo.html
+++ b/demo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
@@ -180,7 +180,7 @@
             <div class="leaf2"><img src="shape-6.webp"></div>
             <h6 class="yellow">HAPPY STUDENTS</h6>
             <h2>What Client Say About Us</h2>
-            <div class="avtar"><img src="people-removebg-preview.png"></div>
+            <img src="about.jpg" class="avtar">
             <p>Lorem sum same dummy text theme industry psum have been them industry the leaf into type setting. Lorem
                 sum same dummy text theme industry psum have been them industry the leaf into type setting. them
                 industry the leaf into type setting. </p>
@@ -189,8 +189,10 @@
             <h6 class="yellow">ui/ux</h6>
         </div>
     </div>
+
     <div class="partner">
         <div class="subdivp">
+            <img src="leaf.webp" class="simg">
             <h6>WORK WITH TRUSTED BRAND</h6>
             <h2>We Have 8,00+ Trusted Partners.</h2>
             <p>Printing and typesetting standard dummy text ever since</p>
@@ -298,6 +300,7 @@
 
     <div class="adWrap">
         <div class="ad">
+            <img src="shape-5.webp" class="adleaf1"><img src="shape-6.webp" class="adleaf2">
             <h6>MOBILE APP AVAILABLE</h6>
             <h2>Download our mobile app. and start coaching anytime.</h2>
             <ul>
