add contact page

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
@@ -177,6 +178,8 @@
     </div>
 
     <div class="footerWrap">
+        <div class="leaf1"><img src="textBackground.webp"></div>
+        <div class="leaf2"><img src="textBackground.webp"></div>
         <div class="footer">
             <div class="footsec1">
                 <h3>Subscribe Newsletter</h3>
@@ -210,5 +213,6 @@
             <li><a href="">Terms of Service </a></li>
         </ul>
     </div>
-    </body>
-    </html>
+</body>
+
+</html>
