--- a/demo.html
+++ b/demo.html
@@ -311,6 +311,8 @@
     </div>
 
     <div class="footerWrap">
+        <div class="leaf1"><img src="textBackground.webp"></div>
+        <div class="leaf2"><img src="textBackground.webp"></div>
         <div class="footer">
             <div class="footsec1">
                 <h3>Subscribe Newsletter</h3>
