add login, description or signup page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
-    <title>demo</title>
+    <title>About us</title>
     <link rel="stylesheet" href="style.css">
     <script>
         function isInViewport(element) {
@@ -39,17 +39,17 @@
     <nav>
         <div class="logo"><img src="logo.png"></img></div>
         <ul class="menu">
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="navbtn"><button>signup</button></div>
+        <div class="navbtn"><a href="login.html"><button>sign-in</button></a></div>
     </nav>
 
     <div class="hero">
         <div class="herotext">
             <h6>Health is wealth</h6>
-            <h1>About Us</h2>
+            <h1>About Us</h1>
                 <p>Home // <span class="yellow">About Us</span></p>
         </div>
     </div>
@@ -88,7 +88,7 @@
                 <li>There are variations of passage’s availabls suffered alteration inner passage’s availab suffered
                     alteration in.</li>
             </ul>
-            <button>All Course</button>
+            <button class="ybtn">All Course</button>
         </div>
     </div>
 
@@ -114,8 +114,8 @@
                 <h4>Willetta Sadler</h4>
             </div>
         </div>
-        <div class="bButton">
-            <Button>Join with us</Button>
+        <div style="margin: auto; margin-top: 4%;">
+            <Button class="ybtn">Join with us</Button>
         </div>
     </div>
 
@@ -189,10 +189,9 @@
             </div>
             <div class="footsec2">
                 <h3>Quick Links</h3>
-                <a></a>
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Contect</a>
+                <a href="demo.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contect</a>
             </div>
             <div class="footsec3">
                 <h3>Opening Hours</h3>
