--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
-    <title>demo</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <script>
         function isInViewport(element) {
@@ -38,11 +38,11 @@
     <nav>
         <div class="logo"><img src="logo.png"></img></div>
         <ul class="menu">
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="navbtn"><button>signup</button></div>
+        <div class="navbtn"><a href="login.html"><button>sign-in</button></a></div>
     </nav>
 
     <div class="hero">
@@ -245,8 +245,8 @@
                         <p><span class="yellow">By</span>: Maddie Rife</p>
                         <span class="yellow">
                             <ul>
-                                <li>87 Likes</li>
-                                <li>58 Share</li>
+                                <li class="yellow">87 Likes</li>
+                                <li class="yellow">58 Share</li>
                             </ul>
                         </span>
                     </div>
@@ -264,8 +264,8 @@
                         <p><span class="yellow">By</span>: Maddie Rife</p>
                         <span class="yellow">
                             <ul>
-                                <li>87 Likes</li>
-                                <li>58 Share</li>
+                                <li class="yellow">87 Likes</li>
+                                <li class="yellow">58 Share</li>
                             </ul>
                         </span>
                     </div>
@@ -283,8 +283,8 @@
                         <p><span class="yellow">By</span>: Maddie Rife</p>
                         <span class="yellow">
                             <ul>
-                                <li>87 Likes</li>
-                                <li>58 Share</li>
+                                <li class="yellow">87 Likes</li>
+                                <li class="yellow">58 Share</li>
                             </ul>
                         </span>
                     </div>
@@ -322,10 +322,9 @@
             </div>
             <div class="footsec2">
                 <h3>Quick Links</h3>
-                <a></a>
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Contect</a>
+                <a href="demo.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contect</a>
             </div>
             <div class="footsec3">
                 <h3>Opening Hours</h3>
