--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
-    <title>Contact Us</title>
+    <title>Signup</title>
     <link rel="stylesheet" href="style.css">
     <script>
         function isInViewport(element) {
@@ -49,39 +49,21 @@
     <div class="hero">
         <div class="herotext">
             <h6>Health is wealth</h6>
-            <h1>Contact Us</h1>
-                <p>Home // <span class="yellow">Contact</span></p>
+            <h1>Sign-up</h1>
+                <p>Home // <span class="yellow">Signup</span></p>
         </div>
     </div>
 
-    <div class="contact">
-        <div class="cont-inner">
-            <h4 class="yellow">Don’t worry!</h4>
-            <h2>If you have any query? Contact with us.</h2>
-            <form class="contact-form">
+    <div class="signupwrap">
+        <div class="sForm">
+            <h4>Create Your account</h4>
+            <form class="signup-form">
                 <input type="text" placeholder="Name">
                 <input type="email" placeholder="Email">
-                <input type="number" placeholder="Phone">
-                <input type="text" placeholder="Address">
-                <textarea placeholder="Message"></textarea>
-                <button type="submit">Submit Now</button>
+                <input type="password" placeholder="Password">
+                <input type="password" placeholder="Conform Password">
+                <button type="submit" class="ybtn">Create an account </button>
             </form>
-        </div>
-        <div class="cont-inner2">
-            <img class="contLeaf" src="shape-5.webp">
-            <h4 class="yellow">Phone:</h4>
-            <p>
-                (765) 388-2142<br>
-                (304) 855-3859</p>
-            <h4 class="yellow">Email</h4>
-            <p>
-                example@gmail.com<br>
-                yourmail@gmail.com
-            </p>
-            <h4 class="yellow">Address:</h4>
-            <p>
-                1229 Roma Ct San Jacinto, California(CA), 92583
-            </p>
         </div>
     </div>
 
